--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,14 +1,13 @@
 @import "../../vars.css";
 
 .container{
-    background-color: #e2e2e2;
-    height: 48rem;
+    height: 42rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     z-index: 1;
-    padding-left: 6%;
-    padding-right:6% ;
+    padding-left: 5%;
+    padding-right:5% ;
 }
 .content{
     display: flex;
@@ -29,7 +28,6 @@
 .wave{
     height: 3rem;
     width: 3rem;
-    margin-left: 10px;
 }
 .button {
     display: inline-block;
@@ -86,6 +84,9 @@
     background-color: #000000;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
+.contactBtn{
+  margin-top: 3rem;
+}
 .description{
     color: #555;
     font-family: Mulish,sans-serif;
@@ -95,9 +96,6 @@
     line-height: 1.6;
     text-wrap: balance;
     max-width: 50rem;
-}
-.contactBtn{
-    margin-top: 3rem;
 }
 .heroPic{
     animation: morph 8s ease-in-out infinite;
@@ -110,7 +108,6 @@
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     height: 28rem;
     position: relative;
-    transition: all 1s ease-in-out;
     width: 22rem;
 }
 @keyframes morph{
@@ -125,12 +122,13 @@
     }
 }
 .stack{
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    left: 6rem;
-    bottom:0;
-    align-items: center;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 .stack p{
     border-right: 2px solid rgba(45,46,50,.5);
@@ -158,18 +156,13 @@
     border-radius: 15px;
     cursor: pointer;
 }
-
+.Main{
+  margin-top: 4rem;
+}
 
 
 @media screen and (max-width: 1500px){
-  .stack{
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    left: 6rem;
-    align-items: center;
-    bottom: 33.6rem;
-  }
+ 
 }
 
 @media screen and (max-width: 1000px){
@@ -184,140 +177,111 @@
         align-items: center;
     }
     .stack{
-        top: 60rem;
-        background-color: #e2e2e2;
-        height: 8rem;
-        width: 100%;
-        left: 0;
+      margin-top: 3rem;
+      width: 100%;
+      text-align: center;
+      text-wrap: nowrap;
     }
     .contactBtn{
-        margin-top: 14rem;
+        margin-top: 2rem;
       }
-
-   
+      .title span{
+        display: flex;
+        justify-content: center;
+      }
+      .aPic{
+          width: 60%;
+      }
+      @keyframes morph{
+    0% {
+      border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+    50% {
+      border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+    }
+    100% {
+      border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+}
 }
 @media screen and (max-width: 770px) {
-    .stack {
-      top: 65rem;
-      background-color: #e2e2e2;
-      height: 8rem;
-      width: 100%;
-      left: 0;
-      flex-direction: column;
-      gap: 3rem;
-    }
     .stack {
         color: #2d2e32;
         font-family: Mulish,sans-serif;
         font-weight: 600;
         margin-bottom: 1rem;
-        text-decoration: underline rgba(45,46,50,.5);
+       
       }
       .stack p {
-        color: #2d2e32;
-        font-family: Mulish,sans-serif;
-        font-weight: 600;
         margin-right: 3rem;
         border: none;
+        border-right: 2px solid rgba(45,46,50,.5);
       }
       .contactBtn {
-        margin-top: 24rem;
+        margin-top: 3rem;
       }
-  }
-@media screen and (max-width: 650px) {
-    .stack{
-      top: 70rem;
-      background-color: #e2e2e2;
-      height: 8rem;
-      width: 100%;
-      left: 0;
-    }
   }
   @media screen and (max-width: 590px) {
     .stack {
-      top: 74rem;
-      background-color: #e2e2e2;
-      height: 10rem;
-      width: 59%;
-      left: 106px;
-      max-width: 20rem;
+      flex-direction: column;
     }
-  }
-  @media screen and (max-width: 570px) {
-    .stack {
-      top: 70rem;
-      background-color: #e2e2e2;
-      height: 10rem;
-      width: 59%;
-      left: 135px;
-      max-width: 20rem;
+    .stack p {
+      margin-right: 0;
+      margin-bottom: 3rem;
+      border: none;
+      border-bottom: 2px solid rgba(45,46,50,.5);
     }
-  }
-  @media screen and (max-width: 460px) {
-    .stack{
-      top: 70rem;
-      background-color: #e2e2e2;
-      height: 10rem;
-      width: 59%;
-      left: 94px;
-      max-width: 20rem;
+    .title{
+      font-size: 3.5rem;
+    }
+    .description{
+      font-size: 1rem;
+    }
+    .techIcon{
+      height: 3rem;
+      width: 3rem;
     }
   }
   @media screen and (max-width: 430px) {
-    .stack{
-      top: 79rem;
-      background-color: #e2e2e2;
-      height: 10rem;
-      width: 59%;
-      left: 131px;
-      max-width: 20rem;
-    }
     .contactBtn{
-      margin-top: 28rem;
+      margin-top: 3rem;
     }
-  }
-  @media screen and (max-width: 420px) {
-    .stack{
-      top: 81rem;
-      background-color: #e2e2e2;
-      height: 10rem;
-      width: 59%;
-      left: 119px;
-      max-width: 20rem;
+    .stack div{
+      margin-left: 54px;
     }
-    .contactBtn {
-        margin-top: 30rem;
-      }
+    .heroPic{
+      animation: _morph_l9eaf_1 8s ease-in-out infinite;
+      -webkit-animation: _morph_l9eaf_1 8s ease-in-out infinite;
+      background-image: url(/images/bola.jpg);
+      background-position: 50%;
+      background-repeat: no-repeat;
+      background-size: cover;
+      border: 3px solid #2d2e32;
+      border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+      height: 26rem;
+      position: relative;
+      width: 20rem;
+    }
+
+      @keyframes morph{
+        0% {
+          border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+        }
+        50% {
+          border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+        }
+        100% {
+          border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+        }
+    }
   }
   @media screen and (max-width: 390px) {
   .title {
     color: #000000;
-    font-size: 3.8rem;
+    font-size: 3.2rem;
     line-height: 1.2;
     margin: 0;
     font-weight: 600;
-  }
-  .stack{
-    top: 72rem;
-    background-color: #e2e2e2;
-    height: 10rem;
-    width: 59%;
-    left: 110px;
-    max-width: 20rem;
-  }
-  .heroPic{
-    animation: _morph_l9eaf_1 8s ease-in-out infinite;
-    -webkit-animation: _morph_l9eaf_1 8s ease-in-out infinite;
-    background-image: url(/images/bola.jpg);
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 3px solid #2d2e32;
-    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    height: 26rem;
-    position: relative;
-    transition: all 1s ease-in-out;
-    width: 18rem;
   }
 }
 @media screen and (max-width: 364px) {
@@ -332,7 +296,6 @@
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     height: 26rem;
     position: relative;
-    transition: all 1s ease-in-out;
     width: 18rem;
   }
   .title{
@@ -341,14 +304,6 @@
     line-height: 1.2;
     margin: 0;
     font-weight: 600;
-  }
-  .stack{
-    top: 68rem;
-    background-color: #e2e2e2;
-    height: 10rem;
-    width: 59%;
-    left: 107px;
-    max-width: 20rem;
   }
   .contactBtn{
     margin-top: 29rem;
