--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import "tailwindcss";
 *{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'Roboto+Condensed';
+}
+html{
+  scroll-behavior: smooth;
 }
 
