--- a/src/pages/project/Project.module.css
+++ b/src/pages/project/Project.module.css
@@ -36,8 +36,7 @@
 .description{
     color: #555;
     font-family: Mulish,sans-serif;
-    font-size: 1.3rem;
-    margin-top: 3rem;
+    font-size: 1.6rem;
     font-weight: 500;
     line-height: 1.6;
     text-wrap: balance;
@@ -152,8 +151,7 @@
         grid-row-gap: 0px; 
       }
     .content{
-        grid-area: 2 / 4 / 3 / 5; 
-        margin-top: 4rem;
+        grid-area: 1 / 4 / 3 / 5; 
     }
     .project{
         grid-area: 3 / 4 / 4 / 5;
@@ -161,8 +159,32 @@
         
     }
     .projectList{
-        padding-left: 10rem;
+        padding-left: 12rem;
     }
+}
+@media screen and (max-width: 1024px){
+    .description{
+        margin-top: 12rem;
+    }
+    .project{
+        overflow: inherit;
+        margin-top: 12rem;
+    }
+    .container {
+        background-color: transparent;
+      }
+}
+@media screen and (max-width: 840px){
+    .description{
+        margin-top: 12rem;
+    }
+    .project{
+        overflow: inherit;
+        margin-top: 12rem;
+    }
+    .container {
+        background-color: transparent;
+      }
 }
 @media screen and (max-width: 700px){
     .projectList{
@@ -184,13 +206,13 @@
       }
 }
 @media screen and (max-width: 460px){
+    .projectList{
+        padding-left: 4rem;
+    }
     .projectBox{
         width: 100%;
         position: relative;
         left: -2rem;
-    }
-    .container{
-        height: 86rem;
     }
     .p3{
         margin-top: 2rem;
@@ -199,14 +221,61 @@
         align-items: center;
         display: flex;
     }
+   
+    .container {
+        height: 82rem;
+        background-color: transparent;
+      }
+      .projectPic {
+        max-width: 100%;
+        height: 10rem;
+      }
+      .project{
+        display: flex;
+        flex-direction: column;
+        height: 28rem;
+      }
+      .description{
+        margin-top: 2rem;
+    }
+    .project{
+        margin-top: 4rem;
+    }
+    
 }
-@media screen and (max-width: 370px){
+@media screen and (max-width: 420px){
+    .description{
+        margin-top: 3rem;
+    }
+    .project {
+        overflow: inherit;
+        margin-top: 6rem;
+      }
+}
+@media screen and (max-width: 390px){
+    .description{
+        margin-top: 10rem;
+    }
+}
+@media screen and (max-width: 380px){
     .projectBox{
         width: 98%;
         position: relative;
         left: -2rem;
     }
-    .projectList{
-        padding-left: 3rem;
-    }
+    .project{
+        display: flex;
+        flex-direction: column;
+        height: 28rem;
+        margin-right: -1rem;
+      }
+      .content{
+        margin-top: 6rem;
+      }
+      .contactBtn {
+        margin-top: 3rem;
+      }
+      .description{
+        margin-top: 0rem;
+      }
 }
